Fix Issue #5 by hiding sidebar on mobile devices by default

--- a/src/scss/core/layout/_sidebar.scss
+++ b/src/scss/core/layout/_sidebar.scss
@@ -23,7 +23,7 @@
         width: $sidebar-base-width;
     }
 
-    @media(max-width: $screen-size-xs) {
+    @media(max-width: $screen-size-md) {
         display: none;
     }
 
